log
Thu 09 May 2024 10:39:02 PM UTC: 
 tests:  1|8
total_score: 0/70
2fe0efd
Thu 09 May 2024 10:52:53 PM UTC: 
 treemap.c | 47 ++++++++++++++++++++++++++++++++---------------
 1 file changed, 32 insertions(+), 15 deletions(-)
In file included from test.c:4:
treemap.c:73:1: error: expected ‘;’, ‘,’ or ‘)’ before ‘{’ token
   73 | {
      | ^
Compilation failed
c02333b
Thu 09 May 2024 10:53:08 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
52c9467
Thu 09 May 2024 10:58:28 PM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:96:22: error: implicit declaration of function ‘lower_than’ [-Werror=implicit-function-declaration]
   96 |             else if (lower_than(node->pair->key,key))
      |                      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7d3ec65
Thu 09 May 2024 10:59:44 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|7
total_score: 5/70
b058d6c
Thu 09 May 2024 11:00:09 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
b7526f1
Thu 09 May 2024 11:33:06 PM UTC: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  8|7
total_score: 5/70
788a58f
Thu 09 May 2024 11:34:23 PM UTC: 
 tests:  8|7
total_score: 5/70
693f9e3
Thu 09 May 2024 11:44:16 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
ed70e89
Thu 09 May 2024 11:50:46 PM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:64:15: error: unused variable ‘node’ [-Werror=unused-variable]
   64 |     TreeNode *node = tree->root;
      |               ^~~~
cc1: all warnings being treated as errors
Compilation failed
372c840
Thu 09 May 2024 11:50:59 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
e45e6ce
Thu 09 May 2024 11:55:41 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:64:15: error: unused variable ‘node’ [-Werror=unused-variable]
   64 |     TreeNode *node = tree->root;
      |               ^~~~
cc1: all warnings being treated as errors
Compilation failed
68536bd
Thu 09 May 2024 11:55:58 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  11|6
total_score: 15/70
c87fd57
Fri 10 May 2024 12:00:17 AM UTC: 
 treemap.c | 29 ++++++++++++++++++++++++++---
 1 file changed, 26 insertions(+), 3 deletions(-)
 tests:  12|6
total_score: 15/70
0486ca8
